After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 786220 - Sometimes the volume icon is replaced with image-missing
Sometimes the volume icon is replaced with image-missing
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.22.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2017-08-13 01:48 UTC by Piotr Drąg
Modified: 2017-10-15 11:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
No volume icon in Rhythmbox (9.89 KB, image/png)
2017-08-13 01:48 UTC, Piotr Drąg
  Details
scalebutton: Fix comparison for empty icon list (836 bytes, patch)
2017-10-08 18:13 UTC, Timm Bäder
committed Details | Review

Description Piotr Drąg 2017-08-13 01:48:51 UTC
Created attachment 357502 [details]
No volume icon in Rhythmbox

Every once in a while apps with volume controls, like Totem or Rhythmbox, start with no volume icon. Instead, image-missing.png is shown.

There doesn’t seem to be a rhyme or reason to how often it happens. I’d estimate it to 1/10 times I launch the app.

gtk3-3.22.17-2.fc26.x86_64
adwaita-icon-theme-3.24.0-2.fc26.noarch
Comment 1 Daniel Boles 2017-08-13 16:52:47 UTC
I presume there are no relevant messages in the terminal during the failing cases?

And if you change the volume such that it would trigger a change to a different one of the 4 possible icons, does that still show image-missing?

  "audio-volume-muted",
  "audio-volume-high",
  "audio-volume-low",
  "audio-volume-medium",
Comment 2 Piotr Drąg 2017-08-13 17:14:37 UTC
(In reply to Daniel Boles from comment #1)
> I presume there are no relevant messages in the terminal during the failing
> cases?
> 

Nothing in the terminal, nothing in the journal.

> And if you change the volume such that it would trigger a change to a
> different one of the 4 possible icons, does that still show image-missing?
> 
>   "audio-volume-muted",
>   "audio-volume-high",
>   "audio-volume-low",
>   "audio-volume-medium",

Yes, it’s always image-missing, in all of these cases.
Comment 3 Matthias Clasen 2017-10-07 21:59:40 UTC
how do we know what icon names rhythmbox is using ?
Comment 4 Timm Bäder 2017-10-08 18:13:57 UTC
Created attachment 361144 [details] [review]
scalebutton: Fix comparison for empty icon list

This also happens in master.
Comment 5 Matthias Clasen 2017-10-11 16:51:13 UTC
Review of attachment 361144 [details] [review]:

Looks to me that you might still trick that check by making icon_list[0] by NULL. Not a very useful case, of course
Comment 6 Timm Bäder 2017-10-11 17:29:23 UTC
We could also just drop the priv->icon_list[0][0] check and try to load icons for all non-empty lists.
Comment 7 Daniel Boles 2017-10-15 11:39:25 UTC
Attachment 361144 [details] pushed as 8db9776 - scalebutton: Fix comparison for empty icon list