scalebutton: Fix comparison for empty icon list

https://bugzilla.gnome.org/show_bug.cgi?id=786220